Adding logger, formating go files with gofmt, and sanity check.
